Refactor imports and update stream operation in WithdrawalRequest and PortfolioService